commit tarea transiciones

--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
             <h1>
             
                 <a href="./index.html" class="header__contenido-titulo" >No Cap Shop</a>
-                <div class="tamaño__imagen">
-                <img class="header__img" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQQeWN5QYJXsXFczfVzT7gqjtLD_omcsNKKIA&usqp=CAU" alt="Logo mock" width="150px">
-                </div>
+
             </h1>
         <section>
             <nav>
@@ -30,9 +28,7 @@
         </div>
     </header>
     <main>
-        <div>
             <h2 class="producto__titulo"> Productos recomendados</h2>
-            </div>
         <!-- flexbox -->
         <section class="flex">
 
@@ -41,7 +37,7 @@
                 <!-- Producto 1 -->
                 <article class="info box">
                      <div class="info__productos">
-                        <small class="info__productos-venta info__productos-1">Nuestro producto preferido</small>
+                        <small class="info_productos-venta info__productos-1">Nuestro preferido</small>
                      <img class="info__imagenes" src="https://encrypted-tbn2.gstatic.com/shopping?q=tbn:ANd9GcStgaYOjdcDT74TvRR8mKpD72akzR1e_Uw6U9zo6R_XpUiHl6Ku6f-5kY0hznGC5pdffcPkUlsFug&usqp=CAc" alt="Gorra golden state" width="350px">
                         </div>
                         <h3 class="productos">Gorra Golden State</h3>
@@ -69,7 +65,7 @@
                     <p class="producto__tres-descripcion">$4999</p>
                 </article>
 
-
+            </div>
 
             
         </section>
@@ -81,7 +77,7 @@
     <footer>Todos los derechos reservados No Cap Shop 2022</footer>
     <div class="instagram">
         <a href="https://www.instagram.com/">
-            <img src="./imagenes/descarga.jpg" alt="Instagram de la pagina" width="80px" height="80px">
+            <img src=".//images/descarga.jpg" alt="Instagram de la pagina" width="80px" height="80px">
         </a>
     </div>
 </body>
