--- a/pages/Locales.html
+++ b/pages/Locales.html
@@ -1,36 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Locales</title>
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../style.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous" />
 </head>
 <body class="fondo">
     <header class="header">
-        <header class="header">
-            <div class="header__contenido">
-                <h1>
-                
-                    <a href="./index.html" class="header__contenido-titulo" >No Cap Shop</a>
-                    <div class="tamaño__imagen">
-                    <img class="header__img" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQQeWN5QYJXsXFczfVzT7gqjtLD_omcsNKKIA&usqp=CAU" alt="Logo mock" width="150px">
-                    </div>
-                </h1>
-         <section>
-        <ul class="menu__principal">
-            <li><a href="../index.html" class="menu">Menu principal</a></li>
-            <li><a href="../pages/Productos.html" class="menu">Productos</a></li>
-            <li><a href="../pages/Locales.html" class="menu">Locales</a></li>
-            <li><a href="../pages/Sobrenosotros.html" class="menu">Sobre nosotros</a></li>
-            <li><a href="../pages/Contacto.html" class="menu">Contacto    </a></li>
-        </ul>
-        </section>
+        <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #fcfcfe;">
+            <div class="container-fluid">
+
+                <a class="navbar-brand" href="/index.html">No Cap Shop</a>
+
+                <button class="navbar-toggler" type="button" data-toggle="collapse"
+                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ml-auto">
+
+                        <li class="nav-item">
+                            <div class="contacto">
+                                <a class="nav-link" href="/index.html">Menu Principal</a>
+                            </div>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/pages/productos.html">Productos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/pages/Locales.html">Locales</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/pages/Sobrenosotros.html">Sobre Nosotros</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/pages/Contacto.html">Contacto</a>
+                        </li>
+
+                    </ul>
+                </div>
+            </div>
+
+        </nav>
         </header>
         <main>
         <div class="mapa">
-            <h3>Tiendas  Recomendadas<h3>
+            <h3 class="lead">Tiendas  Recomendadas<h3>
             <iframe class="container"
             src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d226196.63222746673!2d-58.63944402187722!3d-34.49960552805351!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1stiendas%20de%20zapatillas!5e0!3m2!1ses-419!2sar!4v1648215944167!5m2!1ses-419!2sar"
             width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
