--- a/pages/Sobrenosotros.html
+++ b/pages/Sobrenosotros.html
@@ -6,39 +6,63 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre nosotros</title>
     <link rel="stylesheet" href="../style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous" />
 </head>
 <body class="fondo">
     <header class="header">
-        <div class="header__contenido">
-            <h1>
-            
-                <a href="./index.html" class="header__contenido-titulo" >No Cap Shop</a>
-                <div class="tamaño__imagen">
-                <img class="header__img" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQQeWN5QYJXsXFczfVzT7gqjtLD_omcsNKKIA&usqp=CAU" alt="Logo mock" width="150px">
+        <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #fcfcfe;">
+            <div class="container-fluid">
+
+                <a class="navbar-brand" href="/index.html">No Cap Shop</a>
+
+                <button class="navbar-toggler" type="button" data-toggle="collapse"
+                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ml-auto">
+
+                        <li class="nav-item">
+                            <div class="contacto">
+                                <a class="nav-link" href="/index.html">Menu Principal</a>
+                            </div>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/pages/productos.html">Productos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/pages/Locales.html">Locales</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/pages/Sobrenosotros.html">Sobre Nosotros</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/pages/Contacto.html">Contacto</a>
+                        </li>
+
+                    </ul>
                 </div>
-            </h1>
-        <section>
-        <ul class="menu__principal">
-            <li><a href="../index.html" class="menu">Menu principal</a></li>
-            <li><a href="../pages/Productos.html" class="menu">Productos</a></li>
-            <li><a href="../pages/Locales.html" class="menu">Locales</a></li>
-            <li><a href="../pages/Sobrenosotros.html" class="menu">Sobre nosotros</a></li>
-            <li><a href="../pages/Contacto.html" class="menu">Contacto    </a></li>
-        </ul>
-        </section>  
+            </div>
+
+        </nav>
+
         </header>
+        <div>
         <h1 class="nosotros">Somos una empresa con mas de 30 años en el mercado, ofreciendo a nuestros clientes productos y servicios de la más alta calidad. Estamos formados por un equipo de personal que trabaja para conseguir y garantizar la plena satisfacción de nuestros clientes.</h1>
         <p class="nosotros__texto">¿Porqué elegirnos?    
             Somos un equipo responsable que trabaja con una atención personalizada para sus clientes entregando  solo alta calidad en productos y manejando los mejores tiempos de entrega.</p>
             <p class="nosotros__texto">NUESTROS CLIENTES
                  Aquí mencionamos solo algunos de nuestros clientes satisfechos.
                 es imposible mencionarlos a todos, sin embargo cada uno ha sido importante para nosotros.</p>
-                <img class="img__clientes" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTFw4QLcIv8Od7W_pQIL4sSSGAOPEDTj-1mcQ9qCIHju9BOuiHJc10INr7aoitPgUxA6NM&usqp=CAU" alt="Cliente gorra" width="150px">
-                <img class="img__clientes" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSXDW5NGXzHMmbyyWB1GhUOVkX5q4BeCWG-gA&usqp=CAU" alt="Clientes 2 gorra">
+                <img class="img__clientes" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTFw4QLcIv8Od7W_pQIL4sSSGAOPEDTj-1mcQ9qCIHju9BOuiHJc10INr7aoitPgUxA6NM&usqp=CAU" alt="Cliente gorra" width="150px" />
+                <img class="img__clientes" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSXDW5NGXzHMmbyyWB1GhUOVkX5q4BeCWG-gA&usqp=CAU" alt="Clientes 2 gorra" />
+        </div>
         <footer class="footer">Todos los derechos reservados</footer>
         <div class="instagram">
             <a href="https://www.instagram.com/">
-                <img src="../images/descarga.jpg" alt="Instagram de la pagina" width="80px" height="80px">
+                <img src="../images/descarga.jpg" alt="Instagram de la pagina" width="80px" height="80px" >
             </a>
         </div>
 </body>
