commit segunda entrega

--- a/pages/Productos.html
+++ b/pages/Productos.html
@@ -9,7 +9,7 @@
 </head>
 <body class="fondo">
     <header class="header">
-        <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #fcfcfe;">
+        <nav id="navbar" class="navbar navbar-expand-lg navbar-light" style="background-color: #fcfcfe;">
             <div class="container-fluid">
 
                 <a class="navbar-brand" href="/index.html">No Cap Shop</a>
@@ -50,13 +50,13 @@
         <main class="productos__lista">
             <section>
                 <!-- producto 1 -->
-                <div class="container">
+                <div id="productos-recomendados" class="container">
                     <div class="row">
                         <div class="col-12 col-lg-4">
                             <div class="tarjetas">
                                 <div class="card">
                                     <p class="promo">Producto promocionado</p>
-                                    <img src="https://media.newera.com.ar/catalog/product/cache/ecb27aad430e992f71ce4b1eaf85b1d5/7/0/70343683-gorra-new-era-golden-state-warriors-59fifty-2tone-otc.jpg" alt="producto1venta">
+                                    <img src="../images/golden state.jpg" alt="producto1venta">
                                      <h3>Gorra Golden State</h3>
                                     <p class="primary">$7599</p>
                                 </div>
