--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body class="fondo">
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #fcfcfe;">
+        <nav id="navbar" class="navbar navbar-expand-lg navbar-light" style="background-color: #fcfcfe;">
             <div class="container-fluid">
 
                 <a class="navbar-brand" href="/index.html">No Cap Shop</a>
@@ -47,7 +47,7 @@
         </nav>
     </header>
     <main>
-        <section>
+        <section id="Productos-recomendados">
             <h3 class="text-center producto__titulo">Productos recomendados</h3>
             <div class="container">
                 <div class="row">
@@ -55,12 +55,12 @@
                         <div class="tarjetas">
                             <div class="card">
                                 <p class="promo">Producto promocionado</p>
-                                <img src="https://media.newera.com.ar/catalog/product/cache/ecb27aad430e992f71ce4b1eaf85b1d5/7/0/70343683-gorra-new-era-golden-state-warriors-59fifty-2tone-otc.jpg" alt="producto1">
+                                <img src="./images/golden state.jpg " alt="producto1">
                                  <h3>Gorra Golden State</h3>
                                 <p>$7599</p>
                             </div>
                         </div>
-                    </div>
+                     </div>
                     <div class="container">
                         <div class="row">
                             <div class="col-12 col-lg-4">
@@ -72,7 +72,7 @@
                                         <p>$2489</p>
                                     </div>
                                 </div>
-                            </div>
+                             </div>
                             <div class="container">
                                 <div class="row">
                                     <div class="col-12 col-lg-4">
