--- a/pages/Contacto.html
+++ b/pages/Contacto.html
@@ -10,7 +10,7 @@
 <body class="fondo">
     <header>
         <section>
-            <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #fcfcfe;">
+            <nav id="navbar" class="navbar navbar-expand-lg navbar-light" style="background-color: #fcfcfe;">
                 <div class="container-fluid">
     
                     <a class="navbar-brand" href="/index.html">No Cap Shop</a>
