--- a/pages/Sobrenosotros.html
+++ b/pages/Sobrenosotros.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous" />
 </head>
-<body class="fondo">
+<body class="fondonosotros">
     <header class="header">
         <nav id="navbar" class="navbar navbar-expand-lg navbar-light" style="background-color: #fcfcfe;">
             <div class="container-fluid">
