tarea sass y seo

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </header>
     <main>
         <section id="Productos-recomendados">
-            <h3 class="text-center producto__titulo">Productos recomendados</h3>
+            <h1 class="text-center producto__titulo">Productos recomendados</h1>
             <div class="container">
                 <div class="row">
                     <div class="col-12 col-lg-4">
@@ -67,7 +67,7 @@
                                 <div class="tarjetas">
                                     <div class="card">
                                         <p class="promo">Producto en descuento</p>
-                                        <img src="https://www.digitalsport.com.ar/files/products/60e7658f1f611-561296-280x280.jpg" alt="producto2">
+                                        <img src="./images/gorra beanie lamux.jpg" alt="producto2">
                                          <h3>Gorra beanie lamux</h3>
                                         <p>$2489</p>
                                     </div>
@@ -79,7 +79,7 @@
                                         <div class="tarjetas">
                                             <div class="card">
                                                 <p class="promo">Producto Mas vendido</p>
-                                                <img src="https://www.tripstore.com.ar/media/catalog/product/cache/4769e4d9f3516e60f2b4303f8e5014a8/G/3/G31010381U-100_0.jpg" alt="producto3">
+                                                <img src="./images/gorra gooring bros.jpg" alt="producto3">
                                                  <h3>Gorra Goorin Bros Black Panther</h3>
                                                 <p>$4999</p>
                                             </div>
@@ -88,7 +88,32 @@
 
     </main>
 
-    <footer>Todos los derechos reservados No Cap Shop 2022</footer>
+ <footer class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="footer-col">
+                    <ul>
+                        <li><a href="./index.html">Menu principal</li></a>
+                        <li><a href="/pages/productos.html">Productos</li></a>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <ul>
+                        <li><a href="/pages/Sobrenosotros.html">Sobre Nosotros</li></a>
+                        <li><a href="/pages/Locales.html">Locales</li></a>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <ul>
+                        <li><a href="/pages/Contacto.html">Contacto</li></a>
+                    </ul>
+                </div>
+                <div class="footer__rrss">
+                    <a href="" class="rs-instagram"></a>
+                    <a href="./images/descarga.jpg" class="rs-whatsapp"></a>
+                </div>
+            </footer>
+            
     <div class="instagram">
         <a href="https://www.instagram.com/">
             <img src=".//images/descarga.jpg" alt="Instagram de la pagina" width="80px" height="80px">
