--- a/pages/Contacto.html
+++ b/pages/Contacto.html
@@ -77,7 +77,31 @@
             </form>
         </section>
     </main>
-    <footer>Todos los derechos reservados</footer>
+    <footer class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="footer-col">
+                    <ul>
+                        <li><a href="./index.html">Menu principal</li></a>
+                        <li><a href="/pages/productos.html">Productos</li></a>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <ul>
+                        <li><a href="/pages/Sobrenosotros.html">Sobre Nosotros</li></a>
+                        <li><a href="/pages/Locales.html">Locales</li></a>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <ul>
+                        <li><a href="/pages/Contacto.html">Contacto</li></a>
+                    </ul>
+                </div>
+                <div class="footer__rrss">
+                    <a href="" class="rs-instagram"><i class="bi bi-instagram"></i><a>
+                    <a href="" class="rs-whatsapp"><i class="bi bi-whatsapp"></i><a>
+                </div>
+            </footer>
     <div class="instagram">
         <a href="instagram.com">
             <img src="../images/descarga.jpg" alt="Instagram de la pagina" width="80px" height="80px">
