--- a/pages/Locales.html
+++ b/pages/Locales.html
@@ -58,7 +58,27 @@
         </div>
         </main>
 
-        <footer>Todos los derechos reservados</footer>
+        <footer class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="footer-col">
+                    <ul>
+                        <li><a href="./index.html">Menu principal</li></a>
+                        <li><a href="/pages/productos.html">Productos</li></a>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <ul>
+                        <li><a href="/pages/Sobrenosotros.html">Sobre Nosotros</li></a>
+                        <li><a href="/pages/Locales.html">Locales</li></a>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <ul>
+                        <li><a href="/pages/Contacto.html">Contacto</li></a>
+                    </ul>
+                </div>
+            </footer>
         <div class="instagram">
             <a href="https://www.instagram.com/">
                 <img src="../images/descarga.jpg" alt="Instagram de la pagina" width="80px" height="80px">
