--- a/pages/Sobrenosotros.html
+++ b/pages/Sobrenosotros.html
@@ -59,7 +59,27 @@
                 <img class="img__clientes" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTFw4QLcIv8Od7W_pQIL4sSSGAOPEDTj-1mcQ9qCIHju9BOuiHJc10INr7aoitPgUxA6NM&usqp=CAU" alt="Cliente gorra" width="150px" />
                 <img class="img__clientes" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSXDW5NGXzHMmbyyWB1GhUOVkX5q4BeCWG-gA&usqp=CAU" alt="Clientes 2 gorra" />
         </div>
-        <footer class="footer">Todos los derechos reservados</footer>
+        <footer class="footer">
+            <div class="container">
+                <div class="row">
+                    <div class="footer-col">
+                        <ul>
+                            <li><a href="./index.html">Menu principal</li></a>
+                            <li><a href="/pages/productos.html">Productos</li></a>
+                        </ul>
+                    </div>
+                    <div class="footer-col">
+                        <ul>
+                            <li><a href="/pages/Sobrenosotros.html">Sobre Nosotros</li></a>
+                            <li><a href="/pages/Locales.html">Locales</li></a>
+                        </ul>
+                    </div>
+                    <div class="footer-col">
+                        <ul>
+                            <li><a href="/pages/Contacto.html">Contacto</li></a>
+                        </ul>
+                    </div>
+                </footer>
         <div class="instagram">
             <a href="https://www.instagram.com/">
                 <img src="../images/descarga.jpg" alt="Instagram de la pagina" width="80px" height="80px" >
