--- a/pages/Locales.html
+++ b/pages/Locales.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
+    <meta name="description" content="Gorras, Locales" />
+    <meta name="keywords" content="Gorras, Cap, Hat, nike, goorin bros, nba, Locales" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Locales</title>
     <link rel="stylesheet" href="../css/style.css" />
@@ -58,27 +60,27 @@
         </div>
         </main>
 
-        <footer class="footer">
-        <div class="container">
-            <div class="row">
-                <div class="footer-col">
-                    <ul>
-                        <li><a href="./index.html">Menu principal</li></a>
-                        <li><a href="/pages/productos.html">Productos</li></a>
-                    </ul>
+        <footer class="Footergenerico">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-md-12 text-center">
+                        <h2 class="footer-heading"><a href="#" class="logo">No Cap Shop</a></h2>
+                        <p class="menu">
+                            <a href="../index.html">Menu principal</a>
+                            <a href="../pages/productos.html">Productos</a>
+                            <a href="../pages/Locales.html">Locales</a>
+                            <a href="../pages/Sobrenosotros.html">Sobre nosotros</a>
+                            <a href="../pages/Contacto.html">Contacto</a>
+                        </p>
+                        <ul class="ftco-footer-social p-0">
+              <li class="ftco-animate"><a href="#" data-toggle="tooltip" data-placement="top" title="Twitter"><span class="ion-logo-twitter"></span></a></li>
+              <li class="ftco-animate"><a href="#" data-toggle="tooltip" data-placement="top" title="Facebook"><span class="ion-logo-facebook"></span></a></li>
+              <li class="ftco-animate"><a href="#" data-toggle="tooltip" data-placement="top" title="Instagram"><span class="ion-logo-instagram"></span></a></li>
+            </ul>
+                    </div>
                 </div>
-                <div class="footer-col">
-                    <ul>
-                        <li><a href="/pages/Sobrenosotros.html">Sobre Nosotros</li></a>
-                        <li><a href="/pages/Locales.html">Locales</li></a>
-                    </ul>
-                </div>
-                <div class="footer-col">
-                    <ul>
-                        <li><a href="/pages/Contacto.html">Contacto</li></a>
-                    </ul>
-                </div>
-            </footer>
+            </div>
+        </footer>
         <div class="instagram">
             <a href="https://www.instagram.com/">
                 <img src="../images/descarga.jpg" alt="Instagram de la pagina" width="80px" height="80px">
