--- a/pages/Sobrenosotros.html
+++ b/pages/Sobrenosotros.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="Gorras, Nosotros" />
+    <meta name="keywords" content="Gorras, Cap, Hat, nike, goorin bros, nba" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre nosotros</title>
     <link rel="stylesheet" href="../css/style.css">
@@ -59,27 +60,27 @@
                 <img class="img__clientes" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTFw4QLcIv8Od7W_pQIL4sSSGAOPEDTj-1mcQ9qCIHju9BOuiHJc10INr7aoitPgUxA6NM&usqp=CAU" alt="Cliente gorra" width="150px" />
                 <img class="img__clientes" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSXDW5NGXzHMmbyyWB1GhUOVkX5q4BeCWG-gA&usqp=CAU" alt="Clientes 2 gorra" />
         </div>
-        <footer class="footer">
+        <footer class="Footergenerico">
             <div class="container">
-                <div class="row">
-                    <div class="footer-col">
-                        <ul>
-                            <li><a href="./index.html">Menu principal</li></a>
-                            <li><a href="/pages/productos.html">Productos</li></a>
-                        </ul>
+                <div class="row justify-content-center">
+                    <div class="col-md-12 text-center">
+                        <h2 class="footer-heading"><a href="#" class="logo">No Cap Shop</a></h2>
+                        <p class="menu">
+                            <a href="../index.html">Menu principal</a>
+                            <a href="../pages/productos.html">Productos</a>
+                            <a href="../pages/Locales.html">Locales</a>
+                            <a href="../pages/Sobrenosotros.html">Sobre nosotros</a>
+                            <a href="../pages/Contacto.html">Contacto</a>
+                        </p>
+                        <ul class="ftco-footer-social p-0">
+              <li class="ftco-animate"><a href="#" data-toggle="tooltip" data-placement="top" title="Twitter"><span class="ion-logo-twitter"></span></a></li>
+              <li class="ftco-animate"><a href="#" data-toggle="tooltip" data-placement="top" title="Facebook"><span class="ion-logo-facebook"></span></a></li>
+              <li class="ftco-animate"><a href="#" data-toggle="tooltip" data-placement="top" title="Instagram"><span class="ion-logo-instagram"></span></a></li>
+            </ul>
                     </div>
-                    <div class="footer-col">
-                        <ul>
-                            <li><a href="/pages/Sobrenosotros.html">Sobre Nosotros</li></a>
-                            <li><a href="/pages/Locales.html">Locales</li></a>
-                        </ul>
-                    </div>
-                    <div class="footer-col">
-                        <ul>
-                            <li><a href="/pages/Contacto.html">Contacto</li></a>
-                        </ul>
-                    </div>
-                </footer>
+                </div>
+            </div>
+        </footer>
         <div class="instagram">
             <a href="https://www.instagram.com/">
                 <img src="../images/descarga.jpg" alt="Instagram de la pagina" width="80px" height="80px" >
