--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>No Cap Shop</title>
-    <link rel="stylesheet" href="./css/style.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous" />
+    <link rel="stylesheet" href="./css/style.css" />
 </head>
 <body class="fondo">
     <header>
@@ -88,31 +88,28 @@
 
     </main>
 
- <footer class="footer">
+
+    <footer class="Footergenerico">
         <div class="container">
-            <div class="row">
-                <div class="footer-col">
-                    <ul>
-                        <li><a href="./index.html">Menu principal</li></a>
-                        <li><a href="/pages/productos.html">Productos</li></a>
-                    </ul>
+            <div class="row justify-content-center">
+                <div class="col-md-12 text-center">
+                    <h2 class="footer-heading"><a href="#" class="logo">No Cap Shop</a></h2>
+                    <p class="menu">
+                        <a href="../index.html">Menu principal</a>
+                        <a href="../pages/productos.html">Productos</a>
+                        <a href="../pages/Locales.html">Locales</a>
+                        <a href="../pages/Sobrenosotros.html">Sobre nosotros</a>
+                        <a href="../pages/Contacto.html">Contacto</a>
+                    </p>
+                    <ul class="ftco-footer-social p-0">
+          <li class="ftco-animate"><a href="#" data-toggle="tooltip" data-placement="top" title="Twitter"><span class="ion-logo-twitter"></span></a></li>
+          <li class="ftco-animate"><a href="#" data-toggle="tooltip" data-placement="top" title="Facebook"><span class="ion-logo-facebook"></span></a></li>
+          <li class="ftco-animate"><a href="#" data-toggle="tooltip" data-placement="top" title="Instagram"><span class="ion-logo-instagram"></span></a></li>
+        </ul>
                 </div>
-                <div class="footer-col">
-                    <ul>
-                        <li><a href="/pages/Sobrenosotros.html">Sobre Nosotros</li></a>
-                        <li><a href="/pages/Locales.html">Locales</li></a>
-                    </ul>
-                </div>
-                <div class="footer-col">
-                    <ul>
-                        <li><a href="/pages/Contacto.html">Contacto</li></a>
-                    </ul>
-                </div>
-                <div class="footer__rrss">
-                    <a href="" class="rs-instagram"></a>
-                    <a href="./images/descarga.jpg" class="rs-whatsapp"></a>
-                </div>
-            </footer>
+            </div>
+        </div>
+    </footer>
             
     <div class="instagram">
         <a href="https://www.instagram.com/">
