--- a/pages/Contacto.html
+++ b/pages/Contacto.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
+    <meta name="description" content="Gorras, Sombreros">
+    <meta name="keywords" content="Gorras, Cap, Hat, nike, goorin bros, nba">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contacto</title>
     <link rel="stylesheet" href="../css/style.css" &>
@@ -77,31 +79,27 @@
             </form>
         </section>
     </main>
-    <footer class="footer">
+    <footer class="Footergenerico">
         <div class="container">
-            <div class="row">
-                <div class="footer-col">
-                    <ul>
-                        <li><a href="./index.html">Menu principal</li></a>
-                        <li><a href="/pages/productos.html">Productos</li></a>
-                    </ul>
+            <div class="row justify-content-center">
+                <div class="col-md-12 text-center">
+                    <h2 class="footer-heading"><a href="#" class="logo">No Cap Shop</a></h2>
+                    <p class="menu">
+                        <a href="../index.html">Menu principal</a>
+                            <a href="../pages/productos.html">Productos</a>
+                            <a href="../pages/Locales.html">Locales</a>
+                            <a href="../pages/Sobrenosotros.html">Sobre nosotros</a>
+                            <a href="../pages/Contacto.html">Contacto</a>
+                    </p>
+                    <ul class="ftco-footer-social p-0">
+          <li class="ftco-animate"><a href="#" data-toggle="tooltip" data-placement="top" title="Twitter"><span class="ion-logo-twitter"></span></a></li>
+          <li class="ftco-animate"><a href="#" data-toggle="tooltip" data-placement="top" title="Facebook"><span class="ion-logo-facebook"></span></a></li>
+          <li class="ftco-animate"><a href="#" data-toggle="tooltip" data-placement="top" title="Instagram"><span class="ion-logo-instagram"></span></a></li>
+        </ul>
                 </div>
-                <div class="footer-col">
-                    <ul>
-                        <li><a href="/pages/Sobrenosotros.html">Sobre Nosotros</li></a>
-                        <li><a href="/pages/Locales.html">Locales</li></a>
-                    </ul>
-                </div>
-                <div class="footer-col">
-                    <ul>
-                        <li><a href="/pages/Contacto.html">Contacto</li></a>
-                    </ul>
-                </div>
-                <div class="footer__rrss">
-                    <a href="" class="rs-instagram"><i class="bi bi-instagram"></i><a>
-                    <a href="" class="rs-whatsapp"><i class="bi bi-whatsapp"></i><a>
-                </div>
-            </footer>
+            </div>
+        </div>
+    </footer>
     <div class="instagram">
         <a href="instagram.com">
             <img src="../images/descarga.jpg" alt="Instagram de la pagina" width="80px" height="80px">
