--- a/pages/Contacto.html
+++ b/pages/Contacto.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <meta name="description" content="Gorras, Sombreros">
+    <meta name="description" content="Gorras, Contacto">
     <meta name="keywords" content="Gorras, Cap, Hat, nike, goorin bros, nba">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contacto</title>
