tercer entrega bien

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <meta name="description" content="Gorras, Sombreros, Menu">
+    <meta name="description" content="Gorras, Sombreros, Menu Principal">
     <meta name="keywords" content="Gorras, Cap, Hat, nike, goorin bros, nba">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>No Cap Shop</title>
