--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </header>
     <main>
         <section id="Productos-recomendados">
-            <h1 class="text-center producto__titulo">Productos recomendados</h1>
+            <h1 class="text-center producto__titulo">Bienvenido a No Cap Shop</h1>
             <div class="container">
                 <div class="row">
                     <div class="col-12 col-lg-4">
